# atrace

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  codecov.yml  pyproject.toml
.github/actions/update-homebrew-tap/: action.yml
.github/workflows/: release.yml  test.yml  update-homebrew-tap.yml
Formula/: thirdeye.rb
src/atrace/: __init__.py  __main__.py  cli.py  codec.py  config.py  ids.py  meta.py  paths.py  reader.py  render.py  search.py  store.py  writer.py
src/atrace/commands/: add.py  ingest.py  reads.py
src/thirdeye/: __init__.py  __main__.py  cli.py  config.py  index.py  meta.py  paths.py  reader.py  search.py  store.py  tags.py  timeparse.py  writer.py
src/thirdeye/commands/: add.py  eval.py  ingest.py  reads.py  skill.py  tags.py  usage.py
src/thirdeye/eval/: _ulid.py  definition.py  prompt.py  result.py  runner.py  store.py
src/thirdeye/eval/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/thirdeye/eval/defs/: default.yaml  token-efficiency.yaml  tool-quality.yaml
src/thirdeye/skills/use-thirdeye/: SKILL.md
src/thirdeye/skills/use-thirdeye-evals/: SKILL.md
src/thirdeye/skills/use-thirdeye-evals/references/: eval-definitions.md  evaluation-patterns.md  per-turn-findings.md  running-evals.md  viewing-results.md
src/thirdeye/skills/use-thirdeye/references/: evaluation-workflows.md  searching-and-retrieval.md  setup-and-tracing.md  token-use-analysis.md  tool-call-debugging.md
src/thirdeye/usage/: errlog.py  index.py  store.py  types.py
tests/: conftest.py  test_add_command.py  test_claude_constants.py  test_claude_hooks.py  test_claude_install.py  test_cli.py  test_codec.py  test_codex_constants.py  test_codex_hooks.py  test_codex_install.py  test_e2e.py  test_e2e_claude.py  test_e2e_codex.py  test_e2e_gemini.py  test_eval_agent_base.py  test_eval_agent_claude.py  test_eval_agent_codex.py  test_eval_agent_gemini.py  test_eval_agent_registry.py  test_eval_command.py  test_eval_definition.py  test_eval_prompt.py  test_eval_runner.py  test_eval_store.py  test_eval_types.py  test_gemini_constants.py  test_gemini_hooks.py  test_gemini_install.py  test_ids.py  test_index.py  test_init.py  test_meta.py  test_paths.py  test_platforms_base.py  test_project_setup.py  test_pyproject_scripts.py  test_reader.py  test_reads_cli.py  test_reads_findings.py  test_render.py  (+15 more)
tests/fixtures/usage/: claude_transcript.jsonl  codex_rollout.jsonl  gemini_model_response.json
