[project]
name = "atrace"
version = "0.1.0"
description = "Trace any agentic CLI to a unified local store, queryable from the CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Duncan McKinnon" } ]
dependencies = [
  "click>=8.1",
  "msgpack>=1.0",
  "zstandard>=0.22",
  "pyaml>=23.0",
]

[project.scripts]
atrace = "atrace.cli:main"
atrace-claude-session-start = "atrace.platforms.claude.hooks:session_start"
atrace-claude-user-prompt-submit = "atrace.platforms.claude.hooks:user_prompt_submit"
atrace-claude-pre-tool-use = "atrace.platforms.claude.hooks:pre_tool_use"
atrace-claude-post-tool-use = "atrace.platforms.claude.hooks:post_tool_use"
atrace-claude-stop = "atrace.platforms.claude.hooks:stop"
atrace-claude-subagent-stop = "atrace.platforms.claude.hooks:subagent_stop"
atrace-claude-stop-failure = "atrace.platforms.claude.hooks:stop_failure"
atrace-claude-notification = "atrace.platforms.claude.hooks:notification"
atrace-claude-permission-request = "atrace.platforms.claude.hooks:permission_request"
atrace-claude-session-end = "atrace.platforms.claude.hooks:session_end"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
  "pytest>=8.0",
]
