[project]
name = "atrace"
dynamic = ["version"]
description = "Trace any agentic CLI to a unified local store, queryable from the CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Duncan McKinnon" } ]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "msgpack>=1.0",
  "zstandard>=0.22",
  "pyaml>=23.0",
]

[project.urls]
Homepage = "https://github.com/duncankmckinnon/atrace"
Issues = "https://github.com/duncankmckinnon/atrace/issues"

[project.scripts]
atrace = "atrace.cli:main"
atrace-claude-session-start = "atrace.platforms.claude.hooks:session_start"
atrace-claude-user-prompt-submit = "atrace.platforms.claude.hooks:user_prompt_submit"
atrace-claude-pre-tool-use = "atrace.platforms.claude.hooks:pre_tool_use"
atrace-claude-post-tool-use = "atrace.platforms.claude.hooks:post_tool_use"
atrace-claude-stop = "atrace.platforms.claude.hooks:stop"
atrace-claude-subagent-stop = "atrace.platforms.claude.hooks:subagent_stop"
atrace-claude-stop-failure = "atrace.platforms.claude.hooks:stop_failure"
atrace-claude-notification = "atrace.platforms.claude.hooks:notification"
atrace-claude-permission-request = "atrace.platforms.claude.hooks:permission_request"
atrace-claude-session-end = "atrace.platforms.claude.hooks:session_end"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
version_file = "src/atrace/_version.py"
fallback_version = "0.1.0.dev0"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
  "E501",   # line length handled by formatter
  "UP038",  # isinstance(x, (A, B)) is fine; X | Y is a stylistic preference
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "B007",   # unused loop control variable
  "B011",   # assert False
  "B017",   # blind exception assert
  "E741",   # ambiguous variable names (e.g. `l`)
  "F841",   # unused local (common in `with ... as x:` test patterns)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=atrace --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
source = ["src/atrace"]
omit = ["src/atrace/_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
